Modal base ok with #popeye
 Popeye  issimple modal library for AngularJS 
link:https://pathgather.github.io/popeye/

--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,10 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+    <!-- popeye:js -->
+    <script src="bower_components/angular-popeye/release/popeye.js"></script>
+    <link rel="stylesheet" href="bower_components/angular-popeye/release/popeye.css" />
+    <!-- endpopeye:js -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
