Création de la page de détails pour les personnes

--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
     <!-- endbuild -->
     <!-- popeye:js -->
     <script src="bower_components/angular-popeye/release/popeye.js"></script>
-    <link rel="stylesheet" href="bower_components/angular-popeye/release/popeye.css" />
+    <link rel="stylesheet" type="text/css" href="bower_components/angular-popeye/release/popeye.css" />
     <!-- endpopeye:js -->
 
 
